# codegen

./: CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml
codegen/: data.json  main.py
codegen/drepr/: alignment.py  models.py  prelude.py  varspace.py  writers.py
codegen/models/: __init__.py  ast.py  expr.py  mem.py  memory.py  program.py  statement.py  var.py
