[tool.poetry]
name = "codegen-2"
version = "1.0.0"
description = "Meta-programming"
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
readme = "README.md"
include = ["coge"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
