[project]
name = "codegen-2"
version = "2.15.6"
description = "Meta-programming"
authors = [{ name = "Binh Vu", email = "binh@toan2.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "autoflake>=2.2.1"]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "codegen"
module-root = ""
